--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,10 @@
   display: flex;
   flex-direction: column;
 }
-
+.circle {
+  border-radius: 50%;
+  overflow: hidden;
+}
 .ease-quick {
   transition: all 0.3s ease-in-out;
 }
@@ -56,4 +59,82 @@
 
 .m-auto {
   margin: auto;
+}
+
+/*----------------------------------------------------------->
+  
+<-----------------------------------------------------------*/
+body {
+  background-color: var(--clr-bg);
+}
+main {
+  align-items: center;
+}
+button {
+  height: 40px;
+  width: 80px;
+  border-radius: var(--app-border-rad);
+  font-size: 1.2rem;
+}
+input {
+  width: 200px;
+  height: 40px;
+  border-radius: var(--app-border-rad);
+}
+
+h1 {
+  font-size: 3rem;
+  color: #fefefe;
+  text-align: center;
+}
+header {
+}
+.lobby {
+  width: 500px;
+  height: 300px;
+  background-color: aliceblue;
+  justify-content: space-between;
+  div {
+    width: 150px;
+  }
+
+  h4 {
+    font-size: 1.6rem;
+    line-height: 40px;
+
+  }
+}
+  .profile {
+    height: 100px;
+    width: 100px;
+  }
+.score-display {
+  height: 450px;
+  width: 100%;
+  background-color: #fefefe;
+
+}
+footer {
+  height: 40px;
+  line-height: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-lobby {
+  height: 600px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  button {
+    margin: var(--app-spacing) 0;
+  }
+
+}
+.avatar-wrapper {
+  height: 300px;
+
+  img {
+    height: 300px;
+  }
 }
