--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,7 +155,7 @@ footer {
   align-items: center;
   margin-bottom: var(--app-spacing);
 }
-.multiple-choice-wrapper{
+.multiple-choice-wrapper, .true-false-wrapper{
   width: 800px;
   height: 400px;
   border-radius: var(--app-border-rad);
@@ -178,4 +178,9 @@ footer {
   div:hover {
     transform: scale(1.03);
   }
+}
+
+.selected p {
+  color: green;
+  font-weight: bold;
 }
