--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,3 +184,13 @@ footer {
   color: green;
   font-weight: bold;
 }
+
+.wrong {
+  color: red;
+  font-weight: bold;
+}
+
+.correct {
+  color: green;
+  font-weight: bold;
+}
