--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,3 +292,54 @@ Game Play
   color: green;
   font-weight: bold;
 }
+
+#waitingMessage {
+  color: #f2f6f4;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.pause-banner {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background-color: rgba(0, 0, 0, 0.85); */
+  color: #bbd876;
+  padding: 20px 40px;
+  font-size: 32px;
+  font-weight: 600;
+  border-radius: 12px;
+  z-index: 1000;
+  display: none;
+}
+
+.StopMsg {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background-color: rgba(0, 0, 0, 0.85); */
+  color: #bbd876;
+  padding: 20px 40px;
+  font-size: 32px;
+  font-weight: 600;
+  /* border-radius: 12px; */
+  z-index: 1000;
+  display: none;
+}
+
+.warning-msg {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background-color: rgba(0, 0, 0, 0.85); */
+  color: #bbd876;
+  padding: 20px 40px;
+  font-size: 32px;
+  font-weight: 600;
+  border-radius: 12px;
+  z-index: 1000;
+  display: none;
+}
