--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,8 +59,8 @@
 }
 .circle {
   border-radius: 50%;
-  width: 105px;
-  height: 105px;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   background-color: var(--clr-secondary);
@@ -342,4 +342,9 @@ Game Play
   border-radius: 12px;
   z-index: 1000;
   display: none;
+}
+
+#countdown {
+  color: #f2f6f4;
+  font-size: 2rem;
 }
